# chess960

./: .gitignore  README.md  pytest.ini
docs/: README.md  chess960_overview.md  engines_overview.md  experiments.md  learning_audit.md  repo_navigation.md  rl_algorithms.md
frontend/: README.md  index.html  (+2 more)
learning_backend/: README.md  __init__.py  pyproject.toml  requirements.txt
learning_backend/api/: app.py  routes_arena.py  routes_experiments.py  routes_game.py
learning_backend/chess_core/: __init__.py  board.py  chess960.py  fen.py  moves.py  rules.py
learning_backend/engines/: README.md  __init__.py  base.py  capture_engine.py  chess960_engine.py  heuristic_engine.py  learned_engine.py  material_engine.py  random_engine.py  sunfish_engine.py  weak_minimax_engine.py
learning_backend/envs/: __init__.py  action_space.py  chess960_env.py  observation.py  rewards.py  toy_env.py
learning_backend/experiments/: __init__.py  analyze_results.py  curriculum.py  diagnose_run.py  evaluate.py  rl_sanity_check.py  run_experiment.py  tensorboard_logging.py
learning_backend/experiments/configs/: arena_smoke.json
learning_backend/notebooks/: bootstrap.py  standalone_chess960_PPO.ipynb  train_chess960_agent.ipynb  train_chess960_ppo_verbose.ipynb
learning_backend/rl/: README.md  __init__.py  alphazero.py  checkpoints.py  evaluate.py  ppo.py  train.py  train_alphazero.py
learning_backend/tests/: test_action_space.py  test_alphazero.py  test_api.py  test_chess960.py  test_engines.py  test_env.py  test_evaluation.py  test_ppo.py  test_tensorboard_logging.py
(+7 files in other folders)
